# robot-inspection

./: maf.xlsx  res.metrics.csv  res.rt.csv  results.rt.csv
data/: measurements.csv  program.csv  ref_robot.csv  ref_tracker.csv
robot_accuracy/: pyproject.toml
robot_accuracy/src/robot_accuracy/: __init__.py  cli.py  io.py  metrics.py  pipeline.py  report.py  transform.py
robot_accuracy/src/robot_accuracy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: gen_demo_data.py
